plugins {
    id "java"
    id "application"
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
    gradleVersion = '7.0.1'
}

group 'cz.tefek'
version '350.7'

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

sourceSets {
    main {
        java {
            srcDir "src/main/java"
            srcDir "src/uss/java"
            srcDir "src/framework/java"
            srcDir "src/framework-discord/java"
            srcDir "src/data/java"
            srcDir "src/gamelogic/java"
            srcDir "src/commands/java"
            srcDir "src/util/java"
        }

        resources {
            srcDir "src/main/resources"
            srcDir "src/uss/resources"
            srcDir "src/framework/resources"
            srcDir "src/framework-discord/resources"
            srcDir "src/data/resources"
            srcDir "src/gamelogic/resources"
            srcDir "src/commands/resources"
            srcDir "src/util/resources"
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()

    maven {
        name 'm2dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }

    maven {
        name 'GitHubPackages'
        url 'https://maven.pkg.github.com/493msi/plutoengine/'
        credentials {
            username = '493msi'
            password = System.getenv('GITHUB_PACKAGES_KEY')
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Copy) {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

application {
    mainClass = 'com.botdiril.BotMain'
}

applicationDistribution.from("assets") {
    into "assets"
}

distTar {
    archiveFileName = "${archivesBaseName}.tar"
}

distZip {
    // Feel free to uncomment
    // In Docker, we only care about the .tar file
    enabled = false
}

dependencies {
    implementation group: 'org.jetbrains', name: 'annotations', version: '20.1.0'

    implementation group: 'com.mchange', name: 'c3p0', version: '0.9.5.5'
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'

    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta4'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta4'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.14.0'

    //TODO: Remove this dependency
    implementation group: 'org.json', name: 'json', version: '20201115'

    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.28'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    implementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'

    implementation group: 'net.dv8tion', name: 'JDA', version: '4.2.1_262'

    implementation group: 'cz.tefek', name: 'plutolib', version: '20.2.0.0-alpha.2'
}
